# kannan-nystrom-threshold

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  kannan_nystrom.py  picard_nystrom.py  picard_nystrom_2d.py  pyproject.toml  requirements.txt  run_2d_experiment.py  run_application.py  run_bistability_experiment.py  run_bvp_experiment.py  run_convergence_sweep.py  run_experiment5_highres.py  run_experiment6.py  run_experiment7.py  run_filippov_experiment.py  run_newton_comparison.py  run_real_data_application.py  run_relay_experiment.py  run_scaling_study.py  run_stability_experiment.py  run_two_sided_iteration.py
data/: README.md  royama_plot1_1984_larva.csv  royama_plot1_1985_larva.csv  royama_plot1_1986_larva.csv  royama_plot1_1987_larva.csv  royama_plot1_1988_larva.csv  royama_plot1_1989_larva.csv
